tests/shouldFail/j089a.c
int f(){
}

int main(void){
	return f();
}
